# rust-chatgpt-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  run_tests_on_pr.yml
scripts/github/: gitcommit.sh  gitpr.sh
scripts/github/templates/: gitcommit.template  gitpr.template
scripts/rust/code_review/: code_review.sh  review.template
src/: chatgpt.rs  chatgpt_client_wrapper.rs  conversation.rs  lib.rs  macros.rs  main.rs
