[package]
name = "rust-chatgpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3"
chatgpt_rs = { version = "1.1.3", features = ["streams", "postcard", "json"] }
